JBTIS-1088: Delete unneeded profiles